// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pager /> should not render if there is only one page 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  />
</DocumentFragment>
`;

exports[`<Pager /> should not render next and last button on last page 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="sr-only"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/9"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/6"
        role="button"
      >
        6
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/7"
        role="button"
      >
        7
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/8"
        role="button"
      >
        8
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/9"
        role="button"
      >
        9
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        10
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should not render previous and first button on page 1 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        1
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/2"
        role="button"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/3"
        role="button"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/4"
        role="button"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/5"
        role="button"
      >
        5
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/10"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="sr-only"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render 5 page items with first, previous, next and last button 1`] = `
<DocumentFragment>
  <ul
    class="pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="sr-only"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/4"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/3"
        role="button"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/4"
        role="button"
      >
        4
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
      >
        5
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/6"
        role="button"
      >
        6
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/7"
        role="button"
      >
        7
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/4"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/test/10"
        role="button"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="sr-only"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
